// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonOverflowMenuToolbarItem ButtonOverflowMenuToolbarItem onClick 1`] = `
<div>
  <li
    class=""
    role="none"
  >
    <a
      class="bp5-menu-item bp5-popover-dismiss"
      role="menuitem"
      tabindex="0"
      title="Button Hello"
    >
      <div
        class="bp5-text-overflow-ellipsis bp5-fill"
      >
        Button Hello
      </div>
    </a>
  </li>
</div>
`;

exports[`ButtonOverflowMenuToolbarItem ButtonOverflowMenuToolbarItem renders 1`] = `
<div>
  <li
    class=""
    role="none"
  >
    <a
      class="bp5-menu-item bp5-popover-dismiss"
      role="menuitem"
      tabindex="0"
      title="Button Hello"
    >
      <div
        class="bp5-text-overflow-ellipsis bp5-fill"
      />
    </a>
  </li>
</div>
`;

exports[`ButtonOverflowMenuToolbarItem ButtonOverflowMenuToolbarItem renders empty due to incorrect type 1`] = `<div />`;
